Updated build gradle file